--- a/Projects/Lesson1/WpfTestMailSender/WpfTestMailSender/app.config
+++ b/Projects/Lesson1/WpfTestMailSender/WpfTestMailSender/app.config
@@ -5,14 +5,19 @@
             <section name="WpfTestMailSender.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
-    <applicationSettings>
-        <WpfTestMailSender.Properties.Settings>
-            <setting name="NetworkCredentialUserName" serializeAs="String">
-                <value>progamer@yandex.ru</value>
-            </setting>
-            <setting name="NetworkCredentialPassword" serializeAs="String">
-                <value>japan</value>
-            </setting>
-        </WpfTestMailSender.Properties.Settings>
-    </applicationSettings>
+  <!--system.net>
+    <mailSettings>
+      <smtp from="fsprogamer@gmail.com">
+        <network host="smtp.gmail.com" port="587" enableSsl="true" userName="fsprogamer@gmail.com" password="*******" defaultCredentials="true" />
+      </smtp>
+    </mailSettings>
+  </system.net-->
+  <system.net>
+    <mailSettings>
+      <smtp from="progamer@yandex.ru">
+        <network host="smtp.yandex.ru" port="25" enableSsl="true" userName="progamer@yandex.ru" password="*******" defaultCredentials="true" />
+      </smtp>
+    </mailSettings>
+  </system.net>
+
 </configuration>
