--- a/Projects/Lesson7/BigTask/Common/Common.csproj
+++ b/Projects/Lesson7/BigTask/Common/Common.csproj
@@ -51,6 +51,8 @@
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
     </Compile>
+    <Compile Include="Model\Entity.cs" />
+    <Compile Include="Model\IEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
