--- a/Projects/Lesson1/WpfTestMailSender/WpfTestMailSender/app.config
+++ b/Projects/Lesson1/WpfTestMailSender/WpfTestMailSender/app.config
@@ -7,15 +7,15 @@
     </configSections>
   <!--system.net>
     <mailSettings>
-      <smtp from="fsprogamer@gmail.com">
-        <network host="smtp.gmail.com" port="587" enableSsl="true" userName="fsprogamer@gmail.com" password="*******" defaultCredentials="true" />
+      <smtp from="111111@gmail.com">
+        <network host="smtp.gmail.com" port="587" enableSsl="true" userName="111111@gmail.com" password="*******" defaultCredentials="true" />
       </smtp>
     </mailSettings>
   </system.net-->
   <system.net>
     <mailSettings>
-      <smtp from="progamer@yandex.ru">
-        <network host="smtp.yandex.ru" port="25" enableSsl="true" userName="progamer@yandex.ru" password="*******" defaultCredentials="true" />
+      <smtp from="11111@yandex.ru">
+        <network host="smtp.yandex.ru" port="25" enableSsl="true" userName="11111@yandex.ru" password="*******" defaultCredentials="true" />
       </smtp>
     </mailSettings>
   </system.net>
