--- a/Projects/Lesson7/EFTest/EntityFrameworkApplication/EntityFrameworkApplication.csproj
+++ b/Projects/Lesson7/EFTest/EntityFrameworkApplication/EntityFrameworkApplication.csproj
@@ -91,6 +91,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="SqlLocalContextIntializer.cs" />
     <Compile Include="SqlLocalDbContext.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
